Changed Spell class builder. Added applySpellDamage method to a Creature class. Added Spell Book window.

--- a/battle-model/pom.xml
+++ b/battle-model/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>hero-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>pl.psi</groupId>
+            <artifactId>spells</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
     </dependencies>
 
