--- a/economy-gui/pom.xml
+++ b/economy-gui/pom.xml
@@ -44,6 +44,14 @@
                     <mainClass>pl.psi.gui.Start</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
