[economy] -added ecoHeroConverter

--- a/battle-model/pom.xml
+++ b/battle-model/pom.xml
@@ -55,7 +55,7 @@
         </dependency>
         <dependency>
             <groupId>pl.psi</groupId>
-            <artifactId>hero-common</artifactId>
+            <artifactId>economyHero-common</artifactId>
             <version>${project.version}</version>
         </dependency>
 
