--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </properties>
 
     <modules>
-        <module>hero-common</module>
+        <module>economyHero-common</module>
         <module>economy-model</module>
         <module>economy-gui</module>
         <module>battle-model</module>
