Revert "Merge EconomyHero"
This reverts commit 71f2c26265ca24d71f04809a80352c88c572e3dc, reversing
changes made to 27e5fb5c82223790e954f749757ccbb5bafa4bd6.

--- a/battle-model/pom.xml
+++ b/battle-model/pom.xml
@@ -55,7 +55,7 @@
         </dependency>
         <dependency>
             <groupId>pl.psi</groupId>
-            <artifactId>economyHero-common</artifactId>
+            <artifactId>hero-common</artifactId>
             <version>${project.version}</version>
         </dependency>
 
