--- a/hero-common/pom.xml
+++ b/hero-common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>economyHero-common</artifactId>
+    <artifactId>hero-common</artifactId>
 
     <dependencies>
         <dependency>
