--- a/economy-model/pom.xml
+++ b/economy-model/pom.xml
@@ -24,8 +24,22 @@
         </dependency>
         <dependency>
             <groupId>pl.psi</groupId>
-            <artifactId>hero-common</artifactId>
+            <artifactId>economyHero-common</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>pl.psi</groupId>
+            <artifactId>hero-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
