--- a/economy-model/pom.xml
+++ b/economy-model/pom.xml
@@ -41,6 +41,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>11-ea+25</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
