--- a/economy-model/pom.xml
+++ b/economy-model/pom.xml
@@ -42,6 +42,11 @@
             <version>11-ea+25</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.5</version>
+        </dependency>
     </dependencies>
 
 </project>
